# swarm-agent

./: .gitignore  BUILD_SPEC.md  DESIGN.md  HERMES_SWARM_CONCEPT.md  NOTICE  README.md  deploy.sh  pyproject.toml
examples/: invaders_tasks.jsonl  tasks.jsonl
fleet/: __init__.py  admission.py  board.py  cli.py  compat.py  config.py  engine.py  metrics.py  prompts.py  roster.py  scheduler.py  v3.py  v3_credit.py  v3_sleep.py  warm.py  worker.py
plugin/: __init__.py  plugin.yaml
results/: operating_point.json
scripts/: aimd_probe.py  gen_tasks.py  live_sweep.py  telegram_roundtrip.py  throughput_probe.py
swarm_agent/: PARALLEL_GOALS_PLAN.md  SWARM_V2_CONCEPT.md  SWARM_V2_TODO.md  SWARM_V3_CONCEPT.md  __init__.py  audit.py  cli.py  dashboard.py  goal.py  logbook.py  manager.py  recall.py  runner.py  scheduler.py  taskstore.py  tui.py  worktree.py
swarm_agent/skills/: __init__.py  _env.py  curator.py  format.py  llm.py  manager.py  synth.py  usage.py
swarm_agent/telegram/: __init__.py  bridge.py  inbound.py  render.py  transport.py
tests/: conftest.py  smoke_foundation.py  test_aimd_review_fixes.py  test_board_sqlite.py  test_empty_worker_retry.py  test_engine_timeout.py  test_goal_frontdoor.py  test_inter_goal_deps.py  test_live_swarm_v2.py  test_logbook.py  test_manager_v2.py  test_parallel_goals.py  test_recall.py  test_skills.py  test_swarm_cli.py  test_swarm_v3_fallback.py  test_swarm_v3_hebbian.py  test_swarm_v3_offline.py  test_swarm_v3_reflex.py  test_swarm_v3_sleep.py  test_swarm_v3_unit.py  test_telegram_bridge.py  test_tui.py  test_worktree.py
(+10 files in other folders)
