[project]
name = "swarm-agent"
version = "0.1.0"
description = "Swarm-native high-concurrency agent harness for Step-3.7-Flash"
requires-python = ">=3.10"
dependencies = []   # uses HermesAgent's venv at runtime (imports run_agent)

[project.scripts]
fleet = "fleet.cli:main"
swarm = "swarm_agent.cli:main"

[tool.setuptools.packages.find]
include = ["fleet*", "swarm_agent*"]
